# Technology-World

./: Cargo.toml  Procfile  README.md  index.php  login.php  pricing.php  register.php  rocket.toml
assets/css/: styles.min.css
courses/121/: content.php
courses/122/: content.php
courses/123/: content.php
src/: main.rs
src/database/: mod.rs  models.rs  schema.rs
src/services/: courses.rs  mod.rs  videos.rs  youtube.rs
