[package]
name = "techworld-api"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = false
strip = true
opt-level = 3
codegen-units = 1
lto = true
panic = 'abort'

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.diesel]
version = "2.0.3"
features = ["mysql", "r2d2"]

[dependencies.actix-web]
version = "4.3.1"

[dependencies]
serde = { version = "1.0.94", features = ["derive"] }
serde_json = "1.0.94"
ytextract = "0.11.2"
rustube = "0.6.0"
